Update layout to avoid break on large screen.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,15 @@
     font-family: Helvetica, sans-serif;
 }
 
+html {
+    background: #000;
+}
+
+body {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 a {
     text-decoration: none;
 }
